--- a/styles/flower.css
+++ b/styles/flower.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Open Sans', sans-serif;
+    border: 2px;
 }
 
 nav {
@@ -29,6 +30,7 @@ nav {
     border: 0;
     font-size: 20px;
     color: white;
+    margin: 5px;
 
 
 }
@@ -50,11 +52,13 @@ nav a {
 }
 
 .banner {
-    padding: 30px 30px 0px 100px;
+    padding: 20px 30px 3px 80px;
     display: flex;
     align-items: center;
     height: 500px;
-    margin-top: 50px;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
     background-color: rgb(239, 201, 151);
 
 }
@@ -65,7 +69,7 @@ nav a {
 
 .banner .profile-pic {
 
-    width: 360px;
+    width: 400px;
 }
 
 .banner-greeting {
@@ -110,16 +114,29 @@ nav a {
 
 
 }
+.flower{
+    text-align: center;}
 
+.section-title{
+    font-size: 20px;
+    margin: 10px auto;
+}
+.section-description{
+    font-size: 18px;
+}
 .sale {
-    padding: 30px 30px 0px 100px;
-
+    padding: 20px 30px 0px 100px;
     height: 400px;
+    weight: 1000px;
     margin-top: 20px;
     background-color: rgb(231, 146, 34);
     justify-content: center;
     display: flex;
     align-items: center;
+    margin-top: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+
 
 }
 
@@ -147,17 +164,42 @@ nav a {
 
 }
 
-.sale-description {
-    margin-top: 5px;
-    ;
+.skills-container {
+    margin-right: 200px;
+   margin-left: 10px;
+   margin-bottom: 20px;
+    display: flex;
+    padding: 20px;
 }
 
 .deal {
-    height: 200px;
-    weight: 50% background-color: rgb(231, 146, 34);
+    background-image: url('../Flower\ Asset/Rectangle 9.png');
+    width: 1440px;
+    height: 249px;
+    text-align: center;
+    margin-right: 25px;
+    margin-left: 150px;
+    padding-top: 30px;
+
+}
+
+.deal-content {
     justify-content: center;
-    display: flex;
     align-items: center;
 
-    background-image: url('../Flower\ Asset/Rectangle 9.png')
+}
+
+.footer {
+    background-color: #272727;
+    height: 200px;
+    weight: 500px;
+    margin-top: 20px;
+    text-align: center;
+    color: #f9f6f6;
+
+}
+
+.footer-greeting {
+
+    color: #fbf9f7;
 }
